--- a/Certificate.html
+++ b/Certificate.html
@@ -6,9 +6,8 @@
         <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
         
-        <title>Danny personal page</title>
+        <title>Education and Experience</title>
     </head>
-
     <body>
         <header>
             <div class="container">
@@ -50,37 +49,32 @@
             </div>
         </header>
 
-        <section id="intro">
+        <section id="Award">
             <div class="jumbotron">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                            <h1>龔慕祥的個人網頁</h1>
-                            <p class="lead">這裡是小標題</p>
-                            <a class="btn" href="#">按鈕</a>
+                            <h3>獲獎</h3>
+                            <p class="lead">2022/03 力成科技主任季報比賽優勝</p>
+                            <p class="lead">2013/04 ARML數學聯賽台灣區初賽銀獎</p>
+                            <p class="lead">2013/06 IRML數學聯賽參加獎</p>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
 
-        <section id="second">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-8 offset-md-2 text-center">
-                        <h3>關於我</h3>
-                        <div class="row">
-                            <div class="col-md-4">
-                                <img src="pic/Danny.png">
-                                <h5>龔慕祥</h5>
-                            </div>
-                            <div class="col-md-8 text-left">
-                                <p>你好!我叫龔慕祥，這裡是我的個人網頁~</p>
-                                <p>本人學士與碩士均是念交通大學的工業工程，在學期間有使用R語言做過一些資料分析的課題，也修過mySQL等資料庫相關課程，
-                                    因此具有資料分析能力。且本人論文研究題目為新製程非常態分布管制圖之建構方法，因此我也具備統計基礎。
-                                    本人曾在力成科技擔任超過一年半的生產主任，工作內容需要大量的跨部門溝通、人員管理以及危機處理，因此我也是善於溝通與合作的人。
-                                    並且本人結訓於自強基金會學習大數據分析相關課程，對於跨入新領域充滿期待，希望未來能成為大數據分析與機器學習相關領域的人才。</p>
-                            </div>
+        <section id="Certificate">
+            <div class="jumbotron">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h3>證明</h3>
+                            <p class="lead"><a href="certificate/Python人工智慧與資料科學人才養成班第02期結訓證書.pdf">Python人工智慧與資料科學人才養成班第02期結訓證書</a></p>
+                            <p class="lead">多益金色證書</p>
+                            <p class="lead">交通大學工業工程與管理碩士畢業證書</p>
+                            <p class="lead">交通大學工業工程與管理學士畢業證書</p>
+
                         </div>
                     </div>
                 </div>
