--- a/Education_and_Experience.html
+++ b/Education_and_Experience.html
@@ -57,6 +57,7 @@
                             <h3>經歷</h3>
                             <p class="lead">2022/07 - 2022/09 自強基金會 Python人工智慧與資料科學人才養成班第02期學員</p>
                             <p class="lead">2020/11 - 2022/07 力成科技 生產線主任</p>
+                            <p class="lead">2019/19 - 2020/06 國立交通大學 教師會助理</p>
                         </div>
                     </div>
                 </div>
@@ -72,6 +73,19 @@
                             <p class="lead">2018/09 - 2020/09 國立交通大學 工業工程與管理碩士</p>
                             <p class="lead">2014/09 - 2018/06 國立交通大學 工業工程與管理學士</p>
                             <p class="lead">2011/09 - 2014/06 國立新竹高中 普通班</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="research">
+            <div class="jumbotron">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h3>論文</h3>
+                            <p class="lead"><a href="http://ndltd.ncl.edu.tw/cgi-bin/gs32/gsweb.cgi/login?o=dnclcdr&s=id="108NCTU5031042".&searchmode=basic">應用複式模擬法建構Burr分佈新製程之個別值與移動全距管制圖</a></p>
                         </div>
                     </div>
                 </div>
