--- a/Education_and_Experience.html
+++ b/Education_and_Experience.html
@@ -85,7 +85,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <h3>論文</h3>
-                            <p class="lead"><a href="http://ndltd.ncl.edu.tw/cgi-bin/gs32/gsweb.cgi/login?o=dnclcdr&s=id="108NCTU5031042".&searchmode=basic">應用複式模擬法建構Burr分佈新製程之個別值與移動全距管制圖</a></p>
+                            <p class="lead"><a href='http://ndltd.ncl.edu.tw/cgi-bin/gs32/gsweb.cgi/login?o=dnclcdr&s=id="108NCTU5031042".&searchmode=basic'>應用複式模擬法建構Burr分佈新製程之個別值與移動全距管制圖</a></p>
                         </div>
                     </div>
                 </div>
