--- a/Certificate.html
+++ b/Certificate.html
@@ -31,7 +31,7 @@
                             <a class="nav-link" href="Certificate.html">相關證書 <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">自傳 <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="autobiography.html">自傳 <span class="sr-only">(current)</span></a>
                         </li>
                         </li>
                         <li class="nav-item dropdown">
@@ -55,9 +55,9 @@
                     <div class="row">
                         <div class="col-md-12">
                             <h3>獲獎</h3>
-                            <p class="lead">2022/03 力成科技主任季報比賽優勝</p>
-                            <p class="lead">2013/04 ARML數學聯賽台灣區初賽銀獎</p>
-                            <p class="lead">2013/06 IRML數學聯賽參加獎</p>
+                            <p class="lead"><a href="certificate/力成科技住任季報獎狀.jpg">2022/03 力成科技主任季報比賽優勝</a></p>
+                            <p class="lead"><a href="certificate/ARML台灣區獲獎證明.pdf">2013/04 ARML數學聯賽台灣區初賽銀獎</a></p>
+                            <p class="lead"><a href="certificate/IRML獲獎證明.pdf">2013/06 IRML數學聯賽參加獎</a></p>
                         </div>
                     </div>
                 </div>
@@ -71,9 +71,9 @@
                         <div class="col-md-12">
                             <h3>證明</h3>
                             <p class="lead"><a href="certificate/Python人工智慧與資料科學人才養成班第02期結訓證書.pdf">Python人工智慧與資料科學人才養成班第02期結訓證書</a></p>
-                            <p class="lead">多益金色證書</p>
-                            <p class="lead">交通大學工業工程與管理碩士畢業證書</p>
-                            <p class="lead">交通大學工業工程與管理學士畢業證書</p>
+                            <p class="lead"><a href="certificate/多益金色證書202003 200K.jpg">多益金色證書</a></p>
+                            <p class="lead"><a href="certificate/交通大學工業工程碩士畢業證書.pdf">交通大學工業工程與管理碩士畢業證書</a></p>
+                            <p class="lead"><a href="certificate/交通大學工業工程學士畢業證書.pdf">交通大學工業工程與管理學士畢業證書</a></p>
 
                         </div>
                     </div>
@@ -101,7 +101,7 @@
                             <li><a href="Certificate.html">相關證書</a></li>
                         </ul>
                         <ul>
-                            <li><a href="#">自傳</a></li>
+                            <li><a href="autobiography.html">自傳</a></li>
                             <li><a href="https://github.com/dannyk1003">GitHub</a></li>
                             <li><a href="#">其他</a></li>
                         </ul>
