--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                             <a class="nav-link" href="Certificate.html">相關證書 <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">自傳 <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="autobiography.html">自傳 <span class="sr-only">(current)</span></a>
                         </li>
                         </li>
                         <li class="nav-item dropdown">
@@ -107,7 +107,7 @@
                             <li><a href="Certificate.html">相關證書</a></li>
                         </ul>
                         <ul>
-                            <li><a href="#">自傳</a></li>
+                            <li><a href="autobiography.html">自傳</a></li>
                             <li><a href="https://github.com/dannyk1003">GitHub</a></li>
                             <li><a href="#">其他</a></li>
                         </ul>
