--- a/autobiography.html
+++ b/autobiography.html
@@ -49,45 +49,20 @@
             </div>
         </header>
 
-        <section id="Experience">
+        <section id="autobiography">
             <div class="jumbotron">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                            <h3>經歷</h3>
-                            <p class="lead">2022/07 - 2022/09 自強基金會 Python人工智慧與資料科學人才養成班第02期學員</p>
-                            <p class="lead">2020/11 - 2022/07 力成科技 生產線主任</p>
-                            <p class="lead">2019/19 - 2020/06 國立交通大學 教師會助理</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section id="Education">
-            <div class="jumbotron">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <h3>學歷</h3>
-                            <p class="lead">2018/09 - 2020/09 國立交通大學 工業工程與管理碩士</p>
-                            <p class="lead">2014/09 - 2018/06 國立交通大學 工業工程與管理學士</p>
-                            <p class="lead">2011/09 - 2014/06 國立新竹高中 普通班</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section id="research">
-            <div class="jumbotron">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <h3>碩士論文</h3>
-                            <p class="lead"><a href='http://ndltd.ncl.edu.tw/cgi-bin/gs32/gsweb.cgi/login?o=dnclcdr&s=id="108NCTU5031042".&searchmode=basic'>應用複式模擬法建構Burr分佈新製程之個別值與移動全距管制圖</a></p>
-                            <p>論文摘要</p>
-                            <p>現今產品不斷創新，越來越多的製程屬新製程(Start-Up Process)或短製程(Short-Run Process)，這些新製程經常無法收取足夠的樣本資料來建構傳統蕭華特管制圖，也無法判斷製程是否呈常態分佈。目前已有許多研究提出應用複式模擬法來建構非常態製程之管制圖的方法。此外由於Burr分佈藉由改變機率函數中的兩個參數值即可適配出各種資料之分佈，相當適合用於適配非常態製程資料。因此，本研究之主要目的是應用複式模擬法建構Burr分佈新製程之個別值與移動全距管制圖，最後應用敏感度分析手法探討在不同Burr分佈製程參數組合以及不同新製程之樣本組數下，比較本研究所提出之Burr分佈新製程之個別值與移動全距管制圖與其他新製程管制圖(如Q管制圖等)及傳統個別值與移動全距管制圖，驗證了本研究方法確實有效。本研究方法撰寫成程式軟體後工業界即可簡便操作，甚具實用價值。</p>
+                            <h3>自傳</h3>
+                            <p class="lead">        我是龔慕祥，今年27歲，2020年畢業於國立交通大學工業工程與管理研究所，並於2022年在自強基金會的Python人工智慧與資料科學人才養成班結訓。我生於一家四口的家庭，家境小康而溫馨和樂。母親在學校任教，因此家中總是充滿著書香的氣息，也養成了我喜歡閱讀的習慣。父親在園區科技業工作近三十載，也使我耳濡目染，希望能投身科技業成為科技人。
+                                我從小喜歡數學，面對困難的題目若是能夠解開來能得到偌大的成就感。在新竹高中就讀數理資優班時也曾與同學一同參加數學競試ARML LOCAL(美國地區高中數學聯賽臺灣選拔賽)，得到出國參加ARML(美國地區高中數學聯賽)的資格，為此參加的同學們還一起進行了特訓，共同合作互相砥礪，為的就是能凱旋而歸，雖然最後沒有得到好的名次，但這樣的經驗也讓我受益良多，對於團隊合作的重要性也更加了解。
+                                大學期間我修了相當多的課程，其中包含了統計學與資料分析和Python等課程，這也是我初次接觸到程式設計與資料分析的相關方法與應用，也讓我對程式設計與統計資料分析等領域產生興趣。
+                                就讀碩士期間，我修了實驗設計及進階資料分析與資料科學等相關課程，在學習資料分析的過程中我學得相當有興趣，課程中的小專案讓我們使用R語言對醫院病患的資料進行分析，以預測病患在未來是否會回診，另一個小專案則是分析許多商家的資料，以預測商家未來的營收如何。我也在這些小專案中得到了不錯的成果，更使我希望能從事資料分析相關工作。
+                                我的畢業論文是利用複式模擬法建構Burr分布新製程的個別值與移動全距管制圖，而撰寫論文的過程我使用Matlab程式語言進行資料的模擬與研究方法的建構，以及我也參與了科技部的計畫，而我們研究的過程中也利用了Matlab程式語言對非常態的製程進行管制圖的建構，因此我能使用Matlab與R程式語言解決問題。
+                                    畢業後我的第一份工作是在力成科技擔任生產線主任，工作內容需要大量的跨部門溝通、人員管理與危機處理，因此我也是善於溝通與合作的人，期間我做過一項提升生產品質的專案，藉由獎勵機制與人員在訓練等等方式來提升部門人員的品質意識，這項專案降低了人員造成的人為異常，更提升了生產品質並減少報廢品，也讓部門績效能有所提升。
+                                    大學與碩士期間對程式語言以及資料分析的接觸讓我對相關領域產生興趣，再加上近年對於資料科學與大數據分析相關人才需求的提升，讓我決定離開力成科技進入相關領域。離開力成後，我便參加了自強基金會的Python人工智慧與資料科學人才養成班，期間學習了運用Python對雜亂的遠史資料進行資料清洗、資料分析以及解釋分析結果，最終我們運用所學完成一個關於遊戲類型與銷售量的資料分析小專案，所以收穫不少。
+                                    現在的我在自強的課程結訓後依然持續精進自己的程式能力，並且有閒暇時間時參與相關領域的講座，雖然目前的我還沒有相關的實務經驗，但相信未來如果有機會投身相關領域我能夠運用所學，創造價值。</p>
                         </div>
                     </div>
                 </div>
