--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                             語言
                         </a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">中文 Chinese</a>
+                            <a class="dropdown-item" href="index.html">中文 Chinese</a>
                             <a class="dropdown-item" href="#">英文 English</a>
                         </div>
                         </li>
@@ -56,8 +56,8 @@
                     <div class="row">
                         <div class="col-md-12">
                             <h1>龔慕祥的個人網頁</h1>
-                            <p class="lead">這裡是小標題</p>
-                            <a class="btn" href="#">按鈕</a>
+                            <p class="lead">歡迎來到我的網頁</p>
+                            <a class="btn" href="certificate/學員龔慕祥履歷.pdf">我的履歷</a>
                         </div>
                     </div>
                 </div>
