--- a/Certificate.html
+++ b/Certificate.html
@@ -39,7 +39,7 @@
                             語言
                         </a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">中文 Chinese</a>
+                            <a class="dropdown-item" href="Certificate.html">中文 Chinese</a>
                             <a class="dropdown-item" href="#">英文 English</a>
                         </div>
                         </li>
