--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         <ul>
                             <li><a href="autobiography.html">自傳</a></li>
                             <li><a href="https://github.com/dannyk1003">GitHub</a></li>
-                            <li><a href="#">其他</a></li>
+                            <li><a href="project.html">我的專案</a></li>
                         </ul>
                     </div>
                     <div class="col-md-4">
