--- a/Certificate.html
+++ b/Certificate.html
@@ -74,7 +74,12 @@
                             <p class="lead"><a href="certificate/多益金色證書202003 200K.jpg">多益金色證書</a></p>
                             <p class="lead"><a href="certificate/交通大學工業工程碩士畢業證書.pdf">交通大學工業工程與管理碩士畢業證書</a></p>
                             <p class="lead"><a href="certificate/交通大學工業工程學士畢業證書.pdf">交通大學工業工程與管理學士畢業證書</a></p>
-
+                            <p class="lead"><a href="certificate/【竹科管理局免費課程】AR-VR在智慧機械的展場設計 電子上課證明.pdf">【竹科管理局課程】AR-VR在智慧機械的展場設計 電子上課證明</a></p>
+                            <p class="lead"><a href="certificate/【竹科管理局免費課程】製程精進與品質管理 電子上課證明.pdf">【竹科管理局課程】製程精進與品質管理 電子上課證明</a></p>
+                            <p class="lead"><a href="certificate/【竹科管理局免費講座】行動物聯網發展與應用 電子上課證明.pdf">【竹科管理局講座】行動物聯網發展與應用 電子上課證明</a></p>
+                            <p class="lead"><a href="certificate/【竹科管理局免費講座】微感測器以及其於智慧機械和智慧製造之應用 電子上課證明.pdf">【竹科管理局講座】微感測器以及其於智慧機械和智慧製造之應用 電子上課證明</a></p>
+                            <p class="lead"><a href="certificate/【竹科管理局線上免費講座】3D-IC封裝發展藍圖、現況與未來趨勢 電子上課證明.pdf">【竹科管理局講座】3D-IC封裝發展藍圖、現況與未來趨勢 電子上課證明</a></p>
+                            <p class="lead"><a href="certificate/【竹科管理局線上補助課程】AIOT智慧物聯網核心技術與應用 電子上課證明.pdf">【竹科管理局課程】AIOT智慧物聯網核心技術與應用 電子上課證明</a></p>
                         </div>
                     </div>
                 </div>
