--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <div class="col-md-12">
                             <h1>龔慕祥的個人網頁</h1>
                             <p class="lead">歡迎來到我的網頁</p>
-                            <a class="btn" href="certificate/學員龔慕祥履歷.pdf">我的履歷</a>
+                            <a class="btn" href="https://www.cakeresume.com/s---JaxT7wxlHd0jaGnlZnheQ--/danny-kung-ef3f99">我的履歷</a>
                         </div>
                     </div>
                 </div>
