--- a/EN/autobiography.html
+++ b/EN/autobiography.html
@@ -6,9 +6,8 @@
         <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
         
-        <title>Danny personal page</title>
+        <title>Education and Experience</title>
     </head>
-
     <body>
         <header>
             <div class="container">
@@ -40,8 +39,8 @@
                             語言
                         </a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="index.html">中文 Chinese</a>
-                            <a class="dropdown-item" href="EN/index.html">英文 English</a>
+                            <a class="dropdown-item" href="autobiography.html">中文 Chinese</a>
+                            <a class="dropdown-item" href="#">英文 English</a>
                         </div>
                         </li>
                     </ul>
@@ -50,37 +49,20 @@
             </div>
         </header>
 
-        <section id="intro">
+        <section id="autobiography">
             <div class="jumbotron">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                            <h1>龔慕祥的個人網頁</h1>
-                            <p class="lead">歡迎來到我的網頁</p>
-                            <a class="btn" href="https://www.cakeresume.com/s---JaxT7wxlHd0jaGnlZnheQ--/danny-kung-ef3f99">我的履歷</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section id="second">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-8 offset-md-2 text-center">
-                        <h3>關於我</h3>
-                        <div class="row">
-                            <div class="col-md-4">
-                                <img src="pic/Danny.png">
-                                <h5>龔慕祥</h5>
-                            </div>
-                            <div class="col-md-8 text-left">
-                                <p>你好!我叫龔慕祥，這裡是我的個人網頁~</p>
-                                <p>本人學士與碩士均是念交通大學的工業工程，在學期間有使用R語言做過一些資料分析的課題，也修過mySQL等資料庫相關課程，因此本人具有資料分析能力。</p>
-                                <p>且本人論文研究題目為新製程非常態分布管制圖之建構方法，因此我也具備統計基礎。</p>
-                                <p>本人曾在力成科技擔任超過一年半的生產主任，工作內容需要大量的跨部門溝通、人員管理以及危機處理，因此我也是善於溝通與合作的人。</p>
-                                <p>並且本人結訓於自強基金會學習大數據分析相關課程，對於跨入新領域充滿期待，希望未來能成為大數據分析與機器學習相關領域的人才。</p>
-                            </div>
+                            <h3>自傳</h3>
+                            <p>我是龔慕祥，今年27歲，2020年畢業於國立交通大學工業工程與管理研究所，並於2022年在自強基金會的Python人工智慧與資料科學人才養成班結訓。我生於一家四口的家庭，家境小康而溫馨和樂。母親在學校任教，因此家中總是充滿著書香的氣息，也養成了我喜歡閱讀的習慣。父親在園區科技業工作近三十載，也使我耳濡目染，希望能投身科技業成為科技人。</p>
+                            <p>我從小喜歡數學，面對困難的題目若是能夠解開來能得到偌大的成就感。在新竹高中就讀數理資優班時也曾與同學一同參加數學競試ARML LOCAL(美國地區高中數學聯賽臺灣選拔賽)，得到出國參加ARML(美國地區高中數學聯賽)的資格，為此參加的同學們還一起進行了特訓，共同合作互相砥礪，為的就是能凱旋而歸，雖然最後沒有得到好的名次，但這樣的經驗也讓我受益良多，對於團隊合作的重要性也更加了解。</p>
+                            <p>大學期間我修了相當多的課程，其中包含了統計學與資料分析和Python等課程，這也是我初次接觸到程式設計與資料分析的相關方法與應用，也讓我對程式設計與統計資料分析等領域產生興趣。</p>
+                            <p>就讀碩士期間，我修了實驗設計及進階資料分析與資料科學等相關課程，在學習資料分析的過程中我學得相當有興趣，課程中的小專案讓我們使用R語言對醫院病患的資料進行分析，以預測病患在未來是否會回診，另一個小專案則是分析許多商家的資料，以預測商家未來的營收如何。我也在這些小專案中得到了不錯的成果，更使我希望能從事資料分析相關工作。</p>
+                            <p>我的畢業論文是利用複式模擬法建構Burr分布新製程的個別值與移動全距管制圖，而撰寫論文的過程我使用Matlab程式語言進行資料的模擬與研究方法的建構，以及我也參與了科技部的計畫，而我們研究的過程中也利用了Matlab程式語言對非常態的製程進行管制圖的建構，因此我能使用Matlab與R程式語言解決問題。</p>
+                            <p>畢業後我的第一份工作是在力成科技擔任生產線主任，工作內容需要大量的跨部門溝通、人員管理與危機處理，因此我也是善於溝通與合作的人，期間我做過一項提升生產品質的專案，藉由獎勵機制與人員在訓練等等方式來提升部門人員的品質意識，這項專案降低了人員造成的人為異常，更提升了生產品質並減少報廢品，也讓部門績效能有所提升。</p>
+                            <p>大學與碩士期間對程式語言以及資料分析的接觸讓我對相關領域產生興趣，再加上近年對於資料科學與大數據分析相關人才需求的提升，讓我決定離開力成科技進入相關領域。離開力成後，我便參加了自強基金會的Python人工智慧與資料科學人才養成班，期間學習了運用Python對雜亂的遠史資料進行資料清洗、資料分析以及解釋分析結果，最終我們運用所學完成一個關於遊戲類型與銷售量的資料分析小專案，所以收穫不少。</p>
+                            <p>現在的我在自強的課程結訓後依然持續精進自己的程式能力，並且有閒暇時間時參與相關領域的講座，雖然目前的我還沒有相關的實務經驗，但相信未來如果有機會投身相關領域我能夠運用所學，創造價值。</p>
                         </div>
                     </div>
                 </div>
