--- a/EN/index.html
+++ b/EN/index.html
@@ -2,7 +2,7 @@
     <head>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&family=Open+Sans&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="../css/style.css">
         <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
         
@@ -14,7 +14,7 @@
             <div class="container">
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
                     <a class="navbar-brand" href="#">
-                        <img src="pic/graduate.png" alt="" style="width: 120px;">
+                        <img src="../pic/graduate.png" alt="" style="width: 120px;">
                     </a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -23,25 +23,25 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="index.html">主頁 <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="index.html">main page <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="Education_and_Experience.html">學經歷 <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="Education_and_Experience.html">Education & Experience <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="Certificate.html">相關證書 <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="Certificate.html">Certificate <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="autobiography.html">自傳 <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="autobiography.html">Autobiography <span class="sr-only">(current)</span></a>
                         </li>
                         </li>
                         <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
-                            語言
+                            Language
                         </a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="index.html">中文 Chinese</a>
-                            <a class="dropdown-item" href="EN/index.html">英文 English</a>
+                            <a class="dropdown-item" href="../index.html">中文 Chinese</a>
+                            <a class="dropdown-item" href="index.html">英文 English</a>
                         </div>
                         </li>
                     </ul>
@@ -55,9 +55,9 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                            <h1>龔慕祥的個人網頁</h1>
-                            <p class="lead">歡迎來到我的網頁</p>
-                            <a class="btn" href="https://www.cakeresume.com/s---JaxT7wxlHd0jaGnlZnheQ--/danny-kung-ef3f99">我的履歷</a>
+                            <h1>Danny's personal page</h1>
+                            <p class="lead">welcome to my website</p>
+                            <a class="btn" href="https://www.cakeresume.com/s---JaxT7wxlHd0jaGnlZnheQ--/danny-kung-ef3f99">Resume</a>
                         </div>
                     </div>
                 </div>
@@ -68,18 +68,18 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 offset-md-2 text-center">
-                        <h3>關於我</h3>
+                        <h3>About me</h3>
                         <div class="row">
                             <div class="col-md-4">
-                                <img src="pic/Danny.png">
-                                <h5>龔慕祥</h5>
+                                <img src="../pic/Danny.png">
+                                <h5>Danny</h5>
                             </div>
                             <div class="col-md-8 text-left">
-                                <p>你好!我叫龔慕祥，這裡是我的個人網頁~</p>
-                                <p>本人學士與碩士均是念交通大學的工業工程，在學期間有使用R語言做過一些資料分析的課題，也修過mySQL等資料庫相關課程，因此本人具有資料分析能力。</p>
-                                <p>且本人論文研究題目為新製程非常態分布管制圖之建構方法，因此我也具備統計基礎。</p>
-                                <p>本人曾在力成科技擔任超過一年半的生產主任，工作內容需要大量的跨部門溝通、人員管理以及危機處理，因此我也是善於溝通與合作的人。</p>
-                                <p>並且本人結訓於自強基金會學習大數據分析相關課程，對於跨入新領域充滿期待，希望未來能成為大數據分析與機器學習相關領域的人才。</p>
+                                <p>Hello! My name is Danny, and here is my personal webpage~</p>
+                                <p>Both my bachelor's and master's degrees are in industrial engineering at NCTU(NYCU). During my studies, I have used R language to do some data analysis projects, and I have also taken courses related to databases such as mySQL. Therefore, I have data analysis ability.</p>
+                                <p>And the topic of my thesis research is the construction method of the abnormal distribution control chart, so I also have the statistical ability.</p>
+                                <p>I have worked as a production Supervisor at Powertech Technology for more than one and a half years. The work requires a lot of cross-departmental communication, people and crisis management, so I am also good at communication and cooperation.</p>
+                                <p>In addition, I have completed training at the Tze Chiang Foundation to study courses related to big data analysis. I am looking forward to enter this new fields and hope to become a talent in big data analysis and machine learning area in the future.</p>
                             </div>
                         </div>
                     </div>
@@ -91,29 +91,29 @@
             <div class="container">
                 <div class="row">
                     <div class=" col-md-12 text-center">
-                        <h3>最尾</h3>
+                        <h3>Final</h3>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-4">
-                        <h4>歡迎來到我的頁面</h4>
-                        <p>感謝您的觀賞</p>
+                        <h4>welcome to my website</h4>
+                        <p>Thanks for watching</p>
                     </div>
                     <div class="col-md-4">
-                        <h4>連結</h4>
+                        <h4>Link</h4>
                         <ul>
-                            <li><a href="index.html">主頁</a></li>
-                            <li><a href="Education_and_Experience.html">學經歷</a></li>
-                            <li><a href="Certificate.html">相關證書</a></li>
+                            <li><a href="index.html">Main page</a></li>
+                            <li><a href="Education_and_Experience.html">Education & Experience</a></li>
+                            <li><a href="Certificate.html">Certificate</a></li>
                         </ul>
                         <ul>
-                            <li><a href="autobiography.html">自傳</a></li>
+                            <li><a href="autobiography.html">Autobiography</a></li>
                             <li><a href="https://github.com/dannyk1003">GitHub</a></li>
-                            <li><a href="project.html">我的專案</a></li>
+                            <li><a href="project.html">Project</a></li>
                         </ul>
                     </div>
                     <div class="col-md-4">
-                        <h4>聯絡資訊</h4>
+                        <h4>Connect me</h4>
                         <p>E-mail: <a href="mailto:1003danny@gmail.com">1003danny@gmail.com</a></p>
                     </div>
                 </div>
