--- a/EN/Education_and_Experience.html
+++ b/EN/Education_and_Experience.html
@@ -6,9 +6,8 @@
         <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
         
-        <title>Danny personal page</title>
+        <title>Education and Experience</title>
     </head>
-
     <body>
         <header>
             <div class="container">
@@ -40,8 +39,8 @@
                             語言
                         </a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="index.html">中文 Chinese</a>
-                            <a class="dropdown-item" href="EN/index.html">英文 English</a>
+                            <a class="dropdown-item" href="Education_and_Experience.html">中文 Chinese</a>
+                            <a class="dropdown-item" href="#">英文 English</a>
                         </div>
                         </li>
                     </ul>
@@ -50,37 +49,45 @@
             </div>
         </header>
 
-        <section id="intro">
+        <section id="Experience">
             <div class="jumbotron">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                            <h1>龔慕祥的個人網頁</h1>
-                            <p class="lead">歡迎來到我的網頁</p>
-                            <a class="btn" href="https://www.cakeresume.com/s---JaxT7wxlHd0jaGnlZnheQ--/danny-kung-ef3f99">我的履歷</a>
+                            <h3>經歷</h3>
+                            <p class="lead">2022/07 - 2022/09 自強基金會 Python人工智慧與資料科學人才養成班第02期學員</p>
+                            <p class="lead">2020/11 - 2022/07 力成科技 生產線主任</p>
+                            <p class="lead">2019/19 - 2020/06 國立交通大學 教師會助理</p>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
 
-        <section id="second">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-8 offset-md-2 text-center">
-                        <h3>關於我</h3>
-                        <div class="row">
-                            <div class="col-md-4">
-                                <img src="pic/Danny.png">
-                                <h5>龔慕祥</h5>
-                            </div>
-                            <div class="col-md-8 text-left">
-                                <p>你好!我叫龔慕祥，這裡是我的個人網頁~</p>
-                                <p>本人學士與碩士均是念交通大學的工業工程，在學期間有使用R語言做過一些資料分析的課題，也修過mySQL等資料庫相關課程，因此本人具有資料分析能力。</p>
-                                <p>且本人論文研究題目為新製程非常態分布管制圖之建構方法，因此我也具備統計基礎。</p>
-                                <p>本人曾在力成科技擔任超過一年半的生產主任，工作內容需要大量的跨部門溝通、人員管理以及危機處理，因此我也是善於溝通與合作的人。</p>
-                                <p>並且本人結訓於自強基金會學習大數據分析相關課程，對於跨入新領域充滿期待，希望未來能成為大數據分析與機器學習相關領域的人才。</p>
-                            </div>
+        <section id="Education">
+            <div class="jumbotron">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h3>學歷</h3>
+                            <p class="lead">2018/09 - 2020/09 國立交通大學 工業工程與管理碩士</p>
+                            <p class="lead">2014/09 - 2018/06 國立交通大學 工業工程與管理學士</p>
+                            <p class="lead">2011/09 - 2014/06 國立新竹高中 普通班</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="research">
+            <div class="jumbotron">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h3>碩士論文</h3>
+                            <p class="lead"><a href='http://ndltd.ncl.edu.tw/cgi-bin/gs32/gsweb.cgi/login?o=dnclcdr&s=id="108NCTU5031042".&searchmode=basic'>應用複式模擬法建構Burr分佈新製程之個別值與移動全距管制圖</a></p>
+                            <p>論文摘要</p>
+                            <p>現今產品不斷創新，越來越多的製程屬新製程(Start-Up Process)或短製程(Short-Run Process)，這些新製程經常無法收取足夠的樣本資料來建構傳統蕭華特管制圖，也無法判斷製程是否呈常態分佈。目前已有許多研究提出應用複式模擬法來建構非常態製程之管制圖的方法。此外由於Burr分佈藉由改變機率函數中的兩個參數值即可適配出各種資料之分佈，相當適合用於適配非常態製程資料。因此，本研究之主要目的是應用複式模擬法建構Burr分佈新製程之個別值與移動全距管制圖，最後應用敏感度分析手法探討在不同Burr分佈製程參數組合以及不同新製程之樣本組數下，比較本研究所提出之Burr分佈新製程之個別值與移動全距管制圖與其他新製程管制圖(如Q管制圖等)及傳統個別值與移動全距管制圖，驗證了本研究方法確實有效。本研究方法撰寫成程式軟體後工業界即可簡便操作，甚具實用價值。</p>
                         </div>
                     </div>
                 </div>
