--- a/EN/autobiography.html
+++ b/EN/autobiography.html
@@ -2,7 +2,7 @@
     <head>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&family=Open+Sans&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="../css/style.css">
         <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
         
@@ -13,7 +13,7 @@
             <div class="container">
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
                     <a class="navbar-brand" href="#">
-                        <img src="pic/graduate.png" alt="" style="width: 120px;">
+                        <img src="../pic/graduate.png" alt="" style="width: 120px;">
                     </a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -22,25 +22,25 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="index.html">主頁 <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="index.html">main page <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="Education_and_Experience.html">學經歷 <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="Education_and_Experience.html">Education & Experience <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="Certificate.html">相關證書 <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="Certificate.html">Certificate <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="autobiography.html">自傳 <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="autobiography.html">Autobiography <span class="sr-only">(current)</span></a>
                         </li>
                         </li>
                         <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
-                            語言
+                            Language
                         </a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="autobiography.html">中文 Chinese</a>
-                            <a class="dropdown-item" href="#">英文 English</a>
+                            <a class="dropdown-item" href="../autobiography.html">中文 Chinese</a>
+                            <a class="dropdown-item" href="autobiography.html">英文 English</a>
                         </div>
                         </li>
                     </ul>
@@ -54,15 +54,15 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                            <h3>自傳</h3>
-                            <p>我是龔慕祥，今年27歲，2020年畢業於國立交通大學工業工程與管理研究所，並於2022年在自強基金會的Python人工智慧與資料科學人才養成班結訓。我生於一家四口的家庭，家境小康而溫馨和樂。母親在學校任教，因此家中總是充滿著書香的氣息，也養成了我喜歡閱讀的習慣。父親在園區科技業工作近三十載，也使我耳濡目染，希望能投身科技業成為科技人。</p>
-                            <p>我從小喜歡數學，面對困難的題目若是能夠解開來能得到偌大的成就感。在新竹高中就讀數理資優班時也曾與同學一同參加數學競試ARML LOCAL(美國地區高中數學聯賽臺灣選拔賽)，得到出國參加ARML(美國地區高中數學聯賽)的資格，為此參加的同學們還一起進行了特訓，共同合作互相砥礪，為的就是能凱旋而歸，雖然最後沒有得到好的名次，但這樣的經驗也讓我受益良多，對於團隊合作的重要性也更加了解。</p>
-                            <p>大學期間我修了相當多的課程，其中包含了統計學與資料分析和Python等課程，這也是我初次接觸到程式設計與資料分析的相關方法與應用，也讓我對程式設計與統計資料分析等領域產生興趣。</p>
-                            <p>就讀碩士期間，我修了實驗設計及進階資料分析與資料科學等相關課程，在學習資料分析的過程中我學得相當有興趣，課程中的小專案讓我們使用R語言對醫院病患的資料進行分析，以預測病患在未來是否會回診，另一個小專案則是分析許多商家的資料，以預測商家未來的營收如何。我也在這些小專案中得到了不錯的成果，更使我希望能從事資料分析相關工作。</p>
-                            <p>我的畢業論文是利用複式模擬法建構Burr分布新製程的個別值與移動全距管制圖，而撰寫論文的過程我使用Matlab程式語言進行資料的模擬與研究方法的建構，以及我也參與了科技部的計畫，而我們研究的過程中也利用了Matlab程式語言對非常態的製程進行管制圖的建構，因此我能使用Matlab與R程式語言解決問題。</p>
-                            <p>畢業後我的第一份工作是在力成科技擔任生產線主任，工作內容需要大量的跨部門溝通、人員管理與危機處理，因此我也是善於溝通與合作的人，期間我做過一項提升生產品質的專案，藉由獎勵機制與人員在訓練等等方式來提升部門人員的品質意識，這項專案降低了人員造成的人為異常，更提升了生產品質並減少報廢品，也讓部門績效能有所提升。</p>
-                            <p>大學與碩士期間對程式語言以及資料分析的接觸讓我對相關領域產生興趣，再加上近年對於資料科學與大數據分析相關人才需求的提升，讓我決定離開力成科技進入相關領域。離開力成後，我便參加了自強基金會的Python人工智慧與資料科學人才養成班，期間學習了運用Python對雜亂的遠史資料進行資料清洗、資料分析以及解釋分析結果，最終我們運用所學完成一個關於遊戲類型與銷售量的資料分析小專案，所以收穫不少。</p>
-                            <p>現在的我在自強的課程結訓後依然持續精進自己的程式能力，並且有閒暇時間時參與相關領域的講座，雖然目前的我還沒有相關的實務經驗，但相信未來如果有機會投身相關領域我能夠運用所學，創造價值。</p>
+                            <h3>Autobiography</h3>
+                            <p>My name is Danny, and I am 27 years old. In 2020, I graduated from the Industrial Engineering and Management Department at National Chiao Tung University. In 2022, I completed the Python Artificial Intelligence and Data Science Talent Development Program at the Tzu Chi Foundation. I was born into a family of four, and we lived a comfortable and happy life. My mother was a teacher, so our home was always filled with the fragrance of books. This fostered my love for reading. My father worked in the technology industry for almost thirty years, and this inspired me to pursue a career in technology.</p>
+                            <p>I have loved mathematics since I was young. Solving difficult problems gives me a great sense of achievement. While attending the math and science program at my high school in Hsinchu, I participated in the ARML LOCAL (American Regions Mathematics League) Taiwan Selection Contest with my classmates. We earned the opportunity to represent Taiwan in the ARML in the United States. We underwent special training together, working collaboratively to sharpen our skills and prepare for the competition. Although we did not achieve a high ranking in the end, the experience taught me valuable lessons and helped me understand the importance of teamwork.</p>
+                            <p>During my university years, I took a lot of courses, including statistics, data analysis, and Python. It was my first exposure to programming and data analysis, and it sparked my interest in these fields.</p>
+                            <p>During my master's studies, I took courses such as Experimental Design and Advanced Data Analysis and Data Science. In the process of learning data analysis, I found myself very interested in the field. In one of our projects, we used R programming language to analyze hospital patient data and predict whether they would revisit in the future. In another project, we analyzed data from various businesses to predict their future revenue. I was able to achieve good results in these projects, which further fueled my desire to pursue a career in data analysis.</p>
+                            <p>For my paper, I used the double simulation method to construct individual value and moving range control charts for the Burr distribution new process. During the thesis writing process, I used MATLAB to simulate data and construct research methods. I also participated in a research project funded by the Ministry of Science and Technology where we used MATLAB and R to construct control charts for non-normal processes. Therefore, I am proficient in using MATLAB and R programming languages to solve problems.</p>
+                            <p>After graduation, my first job was as a production line supervisor at Powertech Technology. The job required a lot of cross-departmental communication, personnel management, and crisis management, so I am skilled at communication and cooperation. During this time, I completed a project to improve production quality by using incentive mechanisms and personnel training to raise the quality awareness of department personnel. This project reduced human-caused abnormalities, improved production quality, reduced scrap, and improved departmental performance.</p>
+                            <p>During my undergraduate and graduate studies, I became interested in programming languages and data analysis. In recent years, the demand for professionals in data science and big data analysis has increased, and this prompted me to leave my position as a production line supervisor at PTI and pursue a career in these fields. After leaving PTI, I participated in the Python Artificial Intelligence and Data Science Talent Development Program offered by TCFST. During the program, I learned how to use Python to clean and analyze messy historical data, as well as how to interpret the results of data analysis. We also completed a data analysis project on game types and sales using the skills we learned. Overall, it was a rewarding experience.</p>
+                            <p>Currently, even after completing the training program at the TCFST, I continue to improve my programming skills and participate in related seminars during my free time. Although I do not have practical experience in the related field at present, I believe that if given the opportunity in the future, I will be able to apply what I have learned and create value.</p>
                         </div>
                     </div>
                 </div>
@@ -73,29 +73,29 @@
             <div class="container">
                 <div class="row">
                     <div class=" col-md-12 text-center">
-                        <h3>最尾</h3>
+                        <h3>Final</h3>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-4">
-                        <h4>歡迎來到我的頁面</h4>
-                        <p>感謝您的觀賞</p>
+                        <h4>welcome to my website</h4>
+                        <p>Thanks for watching</p>
                     </div>
                     <div class="col-md-4">
-                        <h4>連結</h4>
+                        <h4>Link</h4>
                         <ul>
-                            <li><a href="index.html">主頁</a></li>
-                            <li><a href="Education_and_Experience.html">學經歷</a></li>
-                            <li><a href="Certificate.html">相關證書</a></li>
+                            <li><a href="index.html">Main page</a></li>
+                            <li><a href="Education_and_Experience.html">Education & Experience</a></li>
+                            <li><a href="Certificate.html">Certificate</a></li>
                         </ul>
                         <ul>
-                            <li><a href="autobiography.html">自傳</a></li>
+                            <li><a href="autobiography.html">Autobiography</a></li>
                             <li><a href="https://github.com/dannyk1003">GitHub</a></li>
-                            <li><a href="project.html">我的專案</a></li>
+                            <li><a href="project.html">Project</a></li>
                         </ul>
                     </div>
                     <div class="col-md-4">
-                        <h4>聯絡資訊</h4>
+                        <h4>Connect me</h4>
                         <p>E-mail: <a href="mailto:1003danny@gmail.com">1003danny@gmail.com</a></p>
                     </div>
                 </div>
