--- a/Certificate.html
+++ b/Certificate.html
@@ -40,7 +40,7 @@
                         </a>
                         <div class="dropdown-menu">
                             <a class="dropdown-item" href="Certificate.html">中文 Chinese</a>
-                            <a class="dropdown-item" href="#">英文 English</a>
+                            <a class="dropdown-item" href="EN/Certificate.html">英文 English</a>
                         </div>
                         </li>
                     </ul>
