--- a/EN/Certificate.html
+++ b/EN/Certificate.html
@@ -2,7 +2,7 @@
     <head>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&family=Open+Sans&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="../css/style.css">
         <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
         
@@ -13,7 +13,7 @@
             <div class="container">
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
                     <a class="navbar-brand" href="#">
-                        <img src="pic/graduate.png" alt="" style="width: 120px;">
+                        <img src="../pic/graduate.png" alt="" style="width: 120px;">
                     </a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -22,25 +22,25 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="index.html">主頁 <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="index.html">main page <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="Education_and_Experience.html">學經歷 <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="Education_and_Experience.html">Education & Experience <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="Certificate.html">相關證書 <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="Certificate.html">Certificate <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="autobiography.html">自傳 <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="autobiography.html">Autobiography <span class="sr-only">(current)</span></a>
                         </li>
                         </li>
                         <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
-                            語言
+                            Language
                         </a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="Certificate.html">中文 Chinese</a>
-                            <a class="dropdown-item" href="#">英文 English</a>
+                            <a class="dropdown-item" href="../Certificate.html">中文 Chinese</a>
+                            <a class="dropdown-item" href="Certificate.html">英文 English</a>
                         </div>
                         </li>
                     </ul>
@@ -54,10 +54,10 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                            <h3>獲獎</h3>
-                            <p class="lead"><a href="certificate/力成科技住任季報獎狀.jpg">2022/03 力成科技主任季報比賽優勝</a></p>
-                            <p class="lead"><a href="certificate/ARML台灣區獲獎證明.pdf">2013/04 ARML數學聯賽台灣區初賽銀獎</a></p>
-                            <p class="lead"><a href="certificate/IRML獲獎證明.pdf">2013/06 IRML數學聯賽參加獎</a></p>
+                            <h3>Award</h3>
+                            <p class="lead"><a href="../certificate/力成科技住任季報獎狀.jpg">2022/03 PoewrTech Technology Inc production line supervisor quarterly report competition winner</a></p>
+                            <p class="lead"><a href="../certificate/ARML台灣區獲獎證明.pdf">2013/04 ARML Silver medal in Taiwan regional Mathematical Contest</a></p>
+                            <p class="lead"><a href="../certificate/IRML獲獎證明.pdf">2013/06 IRML Participation award in Mathematical Contest</a></p>
                         </div>
                     </div>
                 </div>
@@ -69,17 +69,17 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                            <h3>證明</h3>
-                            <p class="lead"><a href="certificate/Python人工智慧與資料科學人才養成班第02期結訓證書.pdf">Python人工智慧與資料科學人才養成班第02期結訓證書</a></p>
-                            <p class="lead"><a href="certificate/多益金色證書202003 200K.jpg">多益金色證書</a></p>
-                            <p class="lead"><a href="certificate/交通大學工業工程碩士畢業證書.pdf">交通大學工業工程與管理碩士畢業證書</a></p>
-                            <p class="lead"><a href="certificate/交通大學工業工程學士畢業證書.pdf">交通大學工業工程與管理學士畢業證書</a></p>
-                            <p class="lead"><a href="certificate/【竹科管理局免費課程】AR-VR在智慧機械的展場設計 電子上課證明.pdf">【竹科管理局課程】AR-VR在智慧機械的展場設計 電子上課證明</a></p>
-                            <p class="lead"><a href="certificate/【竹科管理局免費課程】製程精進與品質管理 電子上課證明.pdf">【竹科管理局課程】製程精進與品質管理 電子上課證明</a></p>
-                            <p class="lead"><a href="certificate/【竹科管理局免費講座】行動物聯網發展與應用 電子上課證明.pdf">【竹科管理局講座】行動物聯網發展與應用 電子上課證明</a></p>
-                            <p class="lead"><a href="certificate/【竹科管理局免費講座】微感測器以及其於智慧機械和智慧製造之應用 電子上課證明.pdf">【竹科管理局講座】微感測器以及其於智慧機械和智慧製造之應用 電子上課證明</a></p>
-                            <p class="lead"><a href="certificate/【竹科管理局線上免費講座】3D-IC封裝發展藍圖、現況與未來趨勢 電子上課證明.pdf">【竹科管理局講座】3D-IC封裝發展藍圖、現況與未來趨勢 電子上課證明</a></p>
-                            <p class="lead"><a href="certificate/【竹科管理局線上補助課程】AIOT智慧物聯網核心技術與應用 電子上課證明.pdf">【竹科管理局課程】AIOT智慧物聯網核心技術與應用 電子上課證明</a></p>
+                            <h3>Certificate</h3>
+                            <p class="lead"><a href="../certificate/Python人工智慧與資料科學人才養成班第02期結訓證書.pdf">Python AI and data science Development Program completion certificate</a></p>
+                            <p class="lead"><a href="../certificate/多益金色證書202003 200K.jpg">TOEIC Gold Certificate</a></p>
+                            <p class="lead"><a href="../certificate/交通大學工業工程碩士畢業證書.pdf">NCTU Master's Degree Certificate in Industrial Engineering and Management</a></p>
+                            <p class="lead"><a href="../certificate/交通大學工業工程學士畢業證書.pdf">NCTU Bachelor's Degree Certificate in Industrial Engineering and Management</a></p>
+                            <p class="lead"><a href="../certificate/【竹科管理局免費課程】AR-VR在智慧機械的展場設計 電子上課證明.pdf">【Hsinchu Science Park Bureau】AR-VR in Smart Machinery Exhibition Design</a></p>
+                            <p class="lead"><a href="../certificate/【竹科管理局免費課程】製程精進與品質管理 電子上課證明.pdf">【Hsinchu Science Park Bureau】Process Improvement and Quality Management</a></p>
+                            <p class="lead"><a href="../certificate/【竹科管理局免費講座】行動物聯網發展與應用 電子上課證明.pdf">【Hsinchu Science Park Bureau】Development and Applications of Mobile Internet of Things (IoT)</a></p>
+                            <p class="lead"><a href="../certificate/【竹科管理局免費講座】微感測器以及其於智慧機械和智慧製造之應用 電子上課證明.pdf">【Hsinchu Science Park Bureau】Microsensors and Their Applications in Smart Machinery and Industry 4.0</a></p>
+                            <p class="lead"><a href="../certificate/【竹科管理局線上免費講座】3D-IC封裝發展藍圖、現況與未來趨勢 電子上課證明.pdf">【Hsinchu Science Park Bureau】 Development roadmap, current status, and future trends of 3D-IC packaging</a></p>
+                            <p class="lead"><a href="../certificate/【竹科管理局線上補助課程】AIOT智慧物聯網核心技術與應用 電子上課證明.pdf">【Hsinchu Science Park Bureau】 Core Technologies and Applications of AIoT</a></p>
                         </div>
                     </div>
                 </div>
@@ -90,29 +90,29 @@
             <div class="container">
                 <div class="row">
                     <div class=" col-md-12 text-center">
-                        <h3>最尾</h3>
+                        <h3>Final</h3>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-4">
-                        <h4>歡迎來到我的頁面</h4>
-                        <p>感謝您的觀賞</p>
+                        <h4>welcome to my website</h4>
+                        <p>Thanks for watching</p>
                     </div>
                     <div class="col-md-4">
-                        <h4>連結</h4>
+                        <h4>Link</h4>
                         <ul>
-                            <li><a href="index.html">主頁</a></li>
-                            <li><a href="Education_and_Experience.html">學經歷</a></li>
-                            <li><a href="Certificate.html">相關證書</a></li>
+                            <li><a href="index.html">Main page</a></li>
+                            <li><a href="Education_and_Experience.html">Education & Experience</a></li>
+                            <li><a href="Certificate.html">Certificate</a></li>
                         </ul>
                         <ul>
-                            <li><a href="autobiography.html">自傳</a></li>
+                            <li><a href="autobiography.html">Autobiography</a></li>
                             <li><a href="https://github.com/dannyk1003">GitHub</a></li>
-                            <li><a href="project.html">我的專案</a></li>
+                            <li><a href="project.html">Project</a></li>
                         </ul>
                     </div>
                     <div class="col-md-4">
-                        <h4>聯絡資訊</h4>
+                        <h4>Connect me</h4>
                         <p>E-mail: <a href="mailto:1003danny@gmail.com">1003danny@gmail.com</a></p>
                     </div>
                 </div>
