--- a/EN/Education_and_Experience.html
+++ b/EN/Education_and_Experience.html
@@ -2,7 +2,7 @@
     <head>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&family=Open+Sans&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="../css/style.css">
         <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
         
@@ -13,7 +13,7 @@
             <div class="container">
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
                     <a class="navbar-brand" href="#">
-                        <img src="pic/graduate.png" alt="" style="width: 120px;">
+                        <img src="../pic/graduate.png" alt="" style="width: 120px;">
                     </a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -22,25 +22,25 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="index.html">主頁 <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="index.html">main page <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="Education_and_Experience.html">學經歷 <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="Education_and_Experience.html">Education & Experience <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="Certificate.html">相關證書 <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="Certificate.html">Certificate <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="autobiography.html">自傳 <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="autobiography.html">Autobiography <span class="sr-only">(current)</span></a>
                         </li>
                         </li>
                         <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
-                            語言
+                            Language
                         </a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="Education_and_Experience.html">中文 Chinese</a>
-                            <a class="dropdown-item" href="#">英文 English</a>
+                            <a class="dropdown-item" href="../Education_and_Experience.html">中文 Chinese</a>
+                            <a class="dropdown-item" href="Education_and_Experience.html">英文 English</a>
                         </div>
                         </li>
                     </ul>
@@ -54,10 +54,10 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                            <h3>經歷</h3>
-                            <p class="lead">2022/07 - 2022/09 自強基金會 Python人工智慧與資料科學人才養成班第02期學員</p>
-                            <p class="lead">2020/11 - 2022/07 力成科技 生產線主任</p>
-                            <p class="lead">2019/19 - 2020/06 國立交通大學 教師會助理</p>
+                            <h3>Experience</h3>
+                            <p class="lead">2022/07 - 2022/09 Python Artificial Intelligence and Data Science Development Program, Tze Chiang Foundation of Science and Technology (TCFST)  </p>
+                            <p class="lead">2020/11 - 2022/07 Production line Supervisor, Powertech Technology Inc (PTI)</p>
+                            <p class="lead">2019/19 - 2020/06 Teacher's Association Assistant, National Chiao Tung University (NCTU)</p>
                         </div>
                     </div>
                 </div>
@@ -69,10 +69,10 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                            <h3>學歷</h3>
-                            <p class="lead">2018/09 - 2020/09 國立交通大學 工業工程與管理碩士</p>
-                            <p class="lead">2014/09 - 2018/06 國立交通大學 工業工程與管理學士</p>
-                            <p class="lead">2011/09 - 2014/06 國立新竹高中 普通班</p>
+                            <h3>Education</h3>
+                            <p class="lead">2018/09 - 2020/09 Master of Industrial Engineering and Management, National Chiao Tung University </p>
+                            <p class="lead">2014/09 - 2018/06 Bachelor of Industrial Engineering and Management, National Chiao Tung University </p>
+                            <p class="lead">2011/09 - 2014/06 Regular, National Hsinchu Senior High School</p>
                         </div>
                     </div>
                 </div>
@@ -84,10 +84,10 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                            <h3>碩士論文</h3>
-                            <p class="lead"><a href='http://ndltd.ncl.edu.tw/cgi-bin/gs32/gsweb.cgi/login?o=dnclcdr&s=id="108NCTU5031042".&searchmode=basic'>應用複式模擬法建構Burr分佈新製程之個別值與移動全距管制圖</a></p>
-                            <p>論文摘要</p>
-                            <p>現今產品不斷創新，越來越多的製程屬新製程(Start-Up Process)或短製程(Short-Run Process)，這些新製程經常無法收取足夠的樣本資料來建構傳統蕭華特管制圖，也無法判斷製程是否呈常態分佈。目前已有許多研究提出應用複式模擬法來建構非常態製程之管制圖的方法。此外由於Burr分佈藉由改變機率函數中的兩個參數值即可適配出各種資料之分佈，相當適合用於適配非常態製程資料。因此，本研究之主要目的是應用複式模擬法建構Burr分佈新製程之個別值與移動全距管制圖，最後應用敏感度分析手法探討在不同Burr分佈製程參數組合以及不同新製程之樣本組數下，比較本研究所提出之Burr分佈新製程之個別值與移動全距管制圖與其他新製程管制圖(如Q管制圖等)及傳統個別值與移動全距管制圖，驗證了本研究方法確實有效。本研究方法撰寫成程式軟體後工業界即可簡便操作，甚具實用價值。</p>
+                            <h3>Master's paper</h3>
+                            <p class="lead"><a href='http://ndltd.ncl.edu.tw/cgi-bin/gs32/gsweb.cgi/login?o=dnclcdr&s=id="108NCTU5031042".&searchmode=basic'>Constructing an Individual-moving Range Control Chart for a Start-Up Burr Distributed Process using Bootstrap Methods</a></p>
+                            <p>Paper Abstract</p>
+                            <p>Nowadays, due to the rapid innovation of product and process, many start-up process or short-run process are developed from such a process it is hard to provide enough information to construct traditional Shewhart’s control chart. It is also hard be utilized to judge whether the process is normally distributed. In addition, many studies have proposed methods to construct control charts for the non-normal process using Bootstrap methods. Since the Burr distribution can fit many process distributions by given two parameter values in the Burr probability density function, it is appropriate to fit a non-normal distribution. Therefore, the main objective of this study is to construct the individual-moving range control chart for a start-up burr distributed process using Bootstrap methods. Finally, the sensitivity analysis is used to explore Burr distribution with various combinations of parameter values and the number of sample size. The proposed method is compared with other control charts (such as Q control charts) for a start-up process and traditional individual-moving range control charts to verify that the proposed method is effective. The proposed method can be computerized for engineers to use easily in practice.</p>
                         </div>
                     </div>
                 </div>
@@ -98,29 +98,29 @@
             <div class="container">
                 <div class="row">
                     <div class=" col-md-12 text-center">
-                        <h3>最尾</h3>
+                        <h3>Final</h3>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-4">
-                        <h4>歡迎來到我的頁面</h4>
-                        <p>感謝您的觀賞</p>
+                        <h4>welcome to my website</h4>
+                        <p>Thanks for watching</p>
                     </div>
                     <div class="col-md-4">
-                        <h4>連結</h4>
+                        <h4>Link</h4>
                         <ul>
-                            <li><a href="index.html">主頁</a></li>
-                            <li><a href="Education_and_Experience.html">學經歷</a></li>
-                            <li><a href="Certificate.html">相關證書</a></li>
+                            <li><a href="index.html">Main page</a></li>
+                            <li><a href="Education_and_Experience.html">Education & Experience</a></li>
+                            <li><a href="Certificate.html">Certificate</a></li>
                         </ul>
                         <ul>
-                            <li><a href="autobiography.html">自傳</a></li>
+                            <li><a href="autobiography.html">Autobiography</a></li>
                             <li><a href="https://github.com/dannyk1003">GitHub</a></li>
-                            <li><a href="project.html">我的專案</a></li>
+                            <li><a href="project.html">Project</a></li>
                         </ul>
                     </div>
                     <div class="col-md-4">
-                        <h4>聯絡資訊</h4>
+                        <h4>Connect me</h4>
                         <p>E-mail: <a href="mailto:1003danny@gmail.com">1003danny@gmail.com</a></p>
                     </div>
                 </div>
