--- a/EN/project.html
+++ b/EN/project.html
@@ -39,8 +39,8 @@
                             Language
                         </a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="../Certificate.html">中文 Chinese</a>
-                            <a class="dropdown-item" href="Certificate.html">英文 English</a>
+                            <a class="dropdown-item" href="../project.html">中文 Chinese</a>
+                            <a class="dropdown-item" href="project.html">英文 English</a>
                         </div>
                         </li>
                     </ul>
