--- a/project.html
+++ b/project.html
@@ -39,8 +39,8 @@
                             語言
                         </a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="autobiography.html">中文 Chinese</a>
-                            <a class="dropdown-item" href="#">英文 English</a>
+                            <a class="dropdown-item" href="project.html">中文 Chinese</a>
+                            <a class="dropdown-item" href="EN/project.html">英文 English</a>
                         </div>
                         </li>
                     </ul>
