--- a/EN/project.html
+++ b/EN/project.html
@@ -57,6 +57,7 @@
                             <h3>我的專案</h3>
                             <p class="lead"><a href="https://dannyk1003.github.io/Smart_Evaluation_System_for_Video_Game_User_Voting/">Smart Evaluation System for Video Game User Voting</a></p>
                             <p class="lead"><a href="../certificate/電腦視覺專案實作.pdf">Computer Vision Project</a></p>
+                            <p class="lead"><a href="../certificate/自然語言處理專案實作.pdf">NLP Project</a></p>
                         </div>
                     </div>
                 </div>
