--- a/project.html
+++ b/project.html
@@ -57,6 +57,7 @@
                             <h3>我的專案</h3>
                             <p class="lead"><a href="https://dannyk1003.github.io/Smart_Evaluation_System_for_Video_Game_User_Voting/">電子遊戲用戶評價之智慧評估系統</a></p>
                             <p class="lead"><a href="certificate/電腦視覺專案實作.pdf">電腦視覺專案實作</a></p>
+                            <p class="lead"><a href="certificate/自然語言處理專案實作.pdf">自然語言處理專案實作</a></p>
                         </div>
                     </div>
                 </div>
